# test_log

./: Cargo.toml  K2_example.crt  STDIN  cargo  cert.der  cert.pem  generate_cert.sh  identity.p12  key.der  key.pem  log.txt  root-ca.der  root-ca.key.pem  root-ca.pem  root.cnf  server.cnf  server.csr  server.key.pem  servertest.der  verify_key.json
src/: lib.rs  log.txt  main.rs  shield.rs  test.sh
src/shield/: common.rs  lib.rs  mod.rs
