[package]
name = "casetest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
atty = "0.2.14"
ecdsa = "0.16.9"
lazy_static = "1.4.0"
log = "0.4.21"
p256 = "0.9.0"
rand_core = "0.6.4"
tokio = "1.37.0"

