[package]
name = "logshield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.1"
anyhow = "1.0.83"
atty = "0.2.14"
ecdsa = "0.16.9"
generic-array = "1.0.0"
hex-literal = "0.4.1"
lazy_static = "1.4.0"
log = "0.4.21"
openssl = "0.10.64"
p384 = "0.13.0"
rand_core = "0.6.4"
tokio = "1.37.0"


[[bin]]
name = "daemon"
path = "src/daemon/bin/main.rs"

[[bin]]
name = "verifier"
path = "src/verifier/bin/main.rs"

[[bin]]
name = "keyrotation"
path = "src/keyrotation/bin/main.rs"
