[package]
name = "logshield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.1"
anyhow = "1.0.83"
argh = "0.1.12"
atty = "0.2.14"
aws-lc-rs = "1.8.0"
cryptoki = "0.6.2"
ecdsa = "0.16.9"
generic-array = "1.0.0"
hex-literal = "0.4.1"
lazy_static = "1.4.0"
log = "0.4.21"
openssl = "0.10.64"
p384 = "0.13.0"
pkcs11 = "0.5.0"
rand_core = "0.6.4"
reqwest = "0.12.5"
rustls = "0.23.11"
rustls-pemfile = "2.1.2"
pki-types = { package = "rustls-pki-types", version = "1.7.0" }
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = "0.26.0"
webpki = "0.22.4"
webpki-roots = "0.26.3"


[[bin]]
name = "daemon"
path = "src/daemon/bin/main.rs"

[[bin]]
name = "verifier"
path = "src/verifier/bin/main.rs"

[[bin]]
name = "keyrotation"
path = "src/keyrotation/bin/main.rs"


[[bin]]
name = "connector"
path = "src/connector/bin/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark/bin/main.rs"
[[bin]]
name = "server"
path = "src/server/bin/main.rs"
